Add persistant database

--- a/notebooks/gre_assist_chatbot.ipynb
+++ b/notebooks/gre_assist_chatbot.ipynb
@@ -327,7 +327,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "  <style>\n",
+       "    pre {\n",
+       "        white-space: pre-wrap;\n",
+       "    }\n",
+       "  </style>\n",
+       "  "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:chromadb.telemetry.posthog:Anonymized telemetry enabled. See https://docs.trychroma.com/telemetry for more information.\n",
+      "Anonymized telemetry enabled. See https://docs.trychroma.com/telemetry for more information.\n"
+     ]
+    }
+   ],
+   "source": [
+    "embeddings = OpenAIEmbeddings()\n",
+    "vectordb = Chroma.from_documents(texts, embeddings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "  <style>\n",
+       "    pre {\n",
+       "        white-space: pre-wrap;\n",
+       "    }\n",
+       "  </style>\n",
+       "  "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "qa = VectorDBQA.from_chain_type(llm=OpenAI(), chain_type=\"stuff\", vectorstore=vectordb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "  <style>\n",
+       "    pre {\n",
+       "        white-space: pre-wrap;\n",
+       "    }\n",
+       "  </style>\n",
+       "  "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "You must specify a persist_directory oncreation to persist the collection.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[38], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m vectordb\u001b[39m.\u001b[39;49mpersist()\n\u001b[1;32m      2\u001b[0m vectordb \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n",
+      "File \u001b[0;32m~/anaconda3/envs/greai/lib/python3.10/site-packages/langchain/vectorstores/chroma.py:349\u001b[0m, in \u001b[0;36mChroma.persist\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    343\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"Persist the collection.\u001b[39;00m\n\u001b[1;32m    344\u001b[0m \n\u001b[1;32m    345\u001b[0m \u001b[39mThis can be used to explicitly persist the data to disk.\u001b[39;00m\n\u001b[1;32m    346\u001b[0m \u001b[39mIt will also be called automatically when the object is destroyed.\u001b[39;00m\n\u001b[1;32m    347\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    348\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_persist_directory \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m--> 349\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    350\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mYou must specify a persist_directory on\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    351\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mcreation to persist the collection.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    352\u001b[0m     )\n\u001b[1;32m    353\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_client\u001b[39m.\u001b[39mpersist()\n",
+      "\u001b[0;31mValueError\u001b[0m: You must specify a persist_directory oncreation to persist the collection."
+     ]
+    }
+   ],
+   "source": [
+    "vectordb.persist()\n",
+    "vectordb = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -354,51 +460,16 @@
      "text": [
       "INFO:chromadb.telemetry.posthog:Anonymized telemetry enabled. See https://docs.trychroma.com/telemetry for more information.\n",
       "Anonymized telemetry enabled. See https://docs.trychroma.com/telemetry for more information.\n",
-      "INFO:clickhouse_connect.driver.ctypes:Successfully imported ClickHouse Connect C data optimizations\n",
-      "Successfully imported ClickHouse Connect C data optimizations\n",
-      "INFO:clickhouse_connect.json_impl:Using python library for writing JSON byte strings\n",
-      "Using python library for writing JSON byte strings\n"
+      "INFO:chromadb.db.duckdb:No existing DB found in db, skipping load\n",
+      "No existing DB found in db, skipping load\n",
+      "INFO:chromadb.db.duckdb:No existing DB found in db, skipping load\n",
+      "No existing DB found in db, skipping load\n"
      ]
     }
    ],
    "source": [
-    "embeddings = OpenAIEmbeddings()\n",
-    "vectordb = Chroma.from_documents(texts, embeddings)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "  <style>\n",
-       "    pre {\n",
-       "        white-space: pre-wrap;\n",
-       "    }\n",
-       "  </style>\n",
-       "  "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages/langchain/chains/retrieval_qa/base.py:206: UserWarning: `VectorDBQA` is deprecated - please use `from langchain.chains import RetrievalQA`\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
-   "source": [
+    "# Now we can load the persisted database from disk, and use it as normal. \n",
+    "vectordb = Chroma(persist_directory=persist_directory, embedding_function=embedding)\n",
     "qa = VectorDBQA.from_chain_type(llm=OpenAI(), chain_type=\"stuff\", vectorstore=vectordb)"
    ]
   },
@@ -439,6 +510,20 @@
    "source": [
     "query = \"What are the most common question types on the GRE?\"\n",
     "qa.run(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# To cleanup, you can delete the collection\n",
+    "vectordb.delete_collection()\n",
+    "vectordb.persist()\n",
+    "\n",
+    "# Or just nuke the persist directory\n",
+    "# !rm -rf db/"
    ]
   }
  ],
